--- a/src/main/resources/templates/blocks/menuTop.html
+++ b/src/main/resources/templates/blocks/menuTop.html
@@ -18,9 +18,8 @@
     <div class="btn-group" >
         <button type="button" id="autoches" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Правилы игры</button>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/home/whatgame">Как искать игру</a></li>
-            <li><a class="dropdown-item" href="/home/round">Действия по раундам</a></li>
-            <li><a class="dropdown-item" href="/home/position">растановка</a></li>
+            <li><a class="dropdown-item" href="/home/whatgame">Механика игры</a></li>
+            
         </ul>
     </div>
 
