--- a/src/main/resources/templates/userMenuTop/button1/autoChess.html
+++ b/src/main/resources/templates/userMenuTop/button1/autoChess.html
@@ -15,17 +15,24 @@
             <div id="blokc">
                 <div  class="top" th:insert="blocks/menuTop :: div"></div>
                     <div class="border border-dark" id="pading">
-                        <h1>Auto Chess — новейшая соревновательная многопользовательская стратегия, разработанная Drodo и Dragonest Co.Ltd, изданная и технически поддерживаемая Dragonest Co.Ltd.</h1>
-                        <h2>Auto Chess</h2>
-                        <t >Auto Chess — это оригинальный автобатлер, разработанный совместно компаниями Dragonest Co.Ltd и Drodo Studio, и изданный Dragonest Co.Ltd.
-                            С момента своего выхода Auto Chess оказывает значительное влияние на игровую индустрию во всём мире благодаря новизне игрового процесса и стратегическим соревновательным функциям. Игра уже обзавелась десятками миллионов поклонников по всему миру. Здесь каждый может соревноваться в сетевых битвах с другими игроками со всего мира и наслаждаться совершенной новой соревновательной стратегией.
-                            Оригинальный игровой процесс, новаторский автобатлер
-                            Auto Chess — инновационный игровой мод, созданный Drodo Studio, — открыл для онлайн-игр новое измерение. Здесь вам доступен самый подлинный контент и самый чистый игровой режим, присущие только этому жанру.
-                            Возможность играть на трёх платформах, всемирно известная онлайн-игра
-                            Мы воплотили давнюю мечту всех — объединили игроков с разных платформ, и теперь все они могут играть друг с другом когда угодно и где угодно, какой бы платформой ни пользовались — консолью, ПК и мобильными устройствами. Состязайтесь с друзьями со всего мира — во вселенной Auto Chess больше нет границ!
-                            Регулярные киберспортивные турниры с честной игрой
-                            Самая честная игра предлагает вам лучшие чемпионаты и международные турниры!
-                            Здесь каждое решение имеет значение, и важен каждый ваш шаг. Значительно повлиять на исход вы можете только своей стратегией. Так что будьте предельно внимательны. И приятной игры!</t>
+                        <article class="featured-article">			
+
+                            <p class="h2">Dota&nbsp;2 Auto Chess</p>
+                
+                            <ul  class="nav justify-content-center">
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/hero/"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/weapon"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
+                            </ul>
+                            <ul  class="nav justify-content-center">
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/ras/"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/classhero/"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                            </ul>
+                            <ul  class="nav justify-content-center">
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/path/"><h3>Патчи</a></h3></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/start/basic-rules/"><h3>Механики игры</a></h3></span>
+                            </ul>
+                
+                        </article>
                     </div>
             
         </div>
