--- a/src/main/resources/templates/userMenuTop/button2/hero.html
+++ b/src/main/resources/templates/userMenuTop/button2/hero.html
@@ -10,72 +10,192 @@
 <header th:insert="blocks/headerFooter/header :: header"></header>
 
 <div class="container-fluid" id="t">
+    <div class="row">
+        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+             th:insert="blocks/menuRightAdmin ::div"></nav>
+
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <div class="border border-dark" id="pading">
+
+                <div class="inline-block-table">
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr>
+                            <th colspan="3">1$Фигуры
+                            </th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr th:each="hero1 : ${displayHeroTir1}">
 
 
-    <div id="blokc">
-        <div  class="top" th:insert="blocks/menuTop :: div"></div>
-        <div class="border border-dark" id="pading">
+                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                                <t th:text="${hero1.hero.nameHero}"></t>
+                            </a></td>
 
-            <table class="table">
-                <thead>
-                <tr>
-                    <th colspan=3>1$Фигуры
-                    </th>
-                    <th colspan=3>2$Фигуры
-                    </th>
-                    <th colspan=3>3$Фигуры
-                    </th>
-                    <th colspan=3>4$Фигуры
-                    </th>
-                    <th colspan=3>5$Фигуры
-                    </th>
-                </tr>
-                </thead>
-
-                <tbody>
-                <tr th:each="hero1 : ${imageHero}">
+                            <td>
+                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                    <td>
-                        <img th:src="'/images/' + ${hero1.iconHero}">
-                        <t th:text="${hero1.hero.nameHero}"></t>
-                    </td>
+                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                    <td>
-                        <div>
-                            <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                     onerror="this.style.visibility = 'hidden'"></td>
 
-                        </div>
-                        <div>
-                            <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
-
-                        </div>
-                        <div>
-                            <img th:src="'/images/' + ${hero1.iconClassHero2}" height="20px" width="20px">
-
-                        </div>
-                    </td>
+                        </tr>
 
 
-                    <td>Otto</td>
-                    <td>Otto</td>
-                    <td>Otto</td>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="inline-block-table">
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr>
+                            <th colspan="3">2$Фигуры
+                            </th>
+                        </tr>
+                        </thead>
 
-                    <td>Otto</td>
-                    <td>Otto</td>
-                    <td>Otto</td>
-
-                    <td>Otto</td>
-                    <td>Otto</td>
-                    <td>Otto</td>
-
-                </tr>
-                </tbody>
-            </table>
+                        <tbody>
+                        <tr th:each="hero1 : ${displayHeroTir2}">
 
 
-        </div>
+                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+
+                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                                <t th:text="${hero1.hero.nameHero}"></t>
+                            </a></td>
+
+                            <td>
+                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                     onerror="this.style.visibility = 'hidden'"></td>
+
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="inline-block-table">
+
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr>
+                            <th colspan="3">3$Фигуры
+                            </th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr th:each="hero1 : ${displayHeroTir3}">
+
+
+                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                                <t th:text="${hero1.hero.nameHero}"></t>
+                            </a></td>
+
+                            <td>
+                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                     onerror="this.style.visibility = 'hidden'"></td>
+
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="inline-block-table">
+
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr>
+                            <th colspan="3">4$Фигуры
+                            </th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr th:each="hero1 : ${displayHeroTir4}">
+
+
+                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                                <t th:text="${hero1.hero.nameHero}"></t>
+                            </a></td>
+
+                            <td>
+                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                     onerror="this.style.visibility = 'hidden'"></td>
+
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="inline-block-table">
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr>
+                            <th colspan="3">5$Фигуры
+                            </th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr th:each="hero1 : ${displayHeroTir5}">
+
+
+                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                                <t th:text="${hero1.hero.nameHero}"></t>
+                            </a></td>
+
+                            <td>
+                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+
+
+                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                     onerror="this.style.visibility = 'hidden'"></td>
+
+                        </tr>
+
+
+                        </tbody>
+                    </table>
+
+                </div>
+
+
+            </div>
+        </main>
     </div>
     <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
