--- a/src/main/resources/templates/menu/button1/autoChessAdmin.html
+++ b/src/main/resources/templates/menu/button1/autoChessAdmin.html
@@ -20,17 +20,15 @@
                             <p class="h2">Dota&nbsp;2 Auto Chess</p>
                 
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/hero/"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/weapon"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/items"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/ras/"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/classhero/"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/rasa"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/class"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/skill"><h3>Абилка<sup class="featured-article__tag__count">17</sup></h3></a></span>
                             </ul>
-                            <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/path/"><h3>Патчи</a></h3></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/start/basic-rules/"><h3>Механики игры</a></h3></span>
-                            </ul>
+
                 
                         </article>
                     </div>
