--- a/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
@@ -15,7 +15,7 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Добавление героя</h1>
-            <form th:action="@{/admin/hero}" method="post" enctype="multipart/form-data">
+            <form th:action="@{/admin/add/hero}" method="post" enctype="multipart/form-data">
                 <p>вставте икону героя
                 <input type="file" name="iconHero">
                 </p>
