--- a/src/main/resources/templates/menu/button2/admin/hero/heroDisplay.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroDisplay.html
@@ -30,20 +30,20 @@
                         <tr th:each="hero1 : ${displayHeroTir1}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals/' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -65,20 +65,20 @@
                         <tr th:each="hero1 : ${displayHeroTir2}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -101,20 +101,20 @@
                         <tr th:each="hero1 : ${displayHeroTir3}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -138,20 +138,20 @@
                         <tr th:each="hero1 : ${displayHeroTir4}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -173,20 +173,20 @@
                         <tr th:each="hero1 : ${displayHeroTir5}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero1}" height="20px" width="20px">
 
 
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'"></td>
 
                         </tr>
@@ -209,23 +209,23 @@
                         <tr th:each="hero1 : ${displayHeroTir6}">
 
 
-                            <td><img th:src="'/images/' + ${hero1.iconHero}"></td>
+                            <td><img th:src="'/images/hero/' + ${hero1.iconHero}"></td>
 
-                            <td><a th:href="'/admin/' +${hero1.hero.id}"  class="link-secondary">
+                            <td><a th:href="'/admin/detals' +${hero1.hero.id}"  class="link-secondary">
                                 <t th:text="${hero1.hero.nameHero}"></t>
                             </a></td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero}" height="20px" width="20px">
                                 <t th:text="${hero1.hero.classHero}"></t>
                             </td>
 
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero1}" height="20px" width="20px">
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero1}" height="20px" width="20px">
                                 <t th:text="${hero1.hero.classHero1}"></t>
                             </td>
                             <td>
-                                <img th:src="'/images/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
+                                <img th:src="'/images/hero/' + ${hero1.iconClassHero2}" alt="" height="20px" width="20px"
                                      onerror="this.style.visibility = 'hidden'">
                                 <t th:text="${hero1.hero.classHero2}"></t>
                             </td>
