--- a/src/main/resources/templates/menu/button2/admin/hero/heroEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroEdit.html
@@ -15,7 +15,7 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" th:each="hero : ${editHero}">
             <h1>Обнавление Героя</h1>
-            <form th:action="@{'/admin/' + ${hero.hero.id}} " method="post" enctype="multipart/form-data">
+            <form th:action="@{'/admin/hero/' + ${hero.hero.id}} " method="post" enctype="multipart/form-data">
                 <p>вставте икону героя
                     <input type="file" name="iconHero" th:value="${hero.iconHero}">
                 </p>
@@ -36,7 +36,7 @@
                 <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Обновить</button>
-                <a th:href="@{'/admin/hero/delete/' + ${hero.hero.id}}" class="btn btn-success">Удалить</a>
+                <a th:href="@{'/admin/delete/hero/' + ${hero.hero.id}}" class="btn btn-success">Удалить</a>
             </form>
 
         </main>
